hphp/hack/test/ifc/check/keyset.php.exp
=== IFC analysis results for keyset.php
File "keyset.php", line 23, characters 5-43:
Data with policy `K` appears in context `A`. (Typing[4379])
  File "keyset.php", line 9, characters 27-44:
  This may be the data source with policy `K`
  File "keyset.php", line 7, characters 19-38:
  This may be the data sink with policy `A`
File "keyset.php", line 13, characters 5-36:
Data with policy `S` appears in context `K`. (Typing[4379])
  File "keyset.php", line 5, characters 17-34:
  This may be the data source with policy `S`
  File "keyset.php", line 9, characters 27-44:
  This may be the data sink with policy `K`
File "keyset.php", line 18, characters 5-46:
Data with policy `S` appears in context `K`. (Typing[4379])
  File "keyset.php", line 5, characters 17-34:
  This may be the data source with policy `S`
  File "keyset.php", line 9, characters 27-44:
  This may be the data sink with policy `K`
File "keyset.php", line 40, characters 5-28:
Data with policy `X` appears in context `KEYSET`. (Typing[4379])
  File "keyset.php", line 30, characters 19-20:
  This may be the data source with policy `X`
  File "keyset.php", line 34, characters 29-35:
  This may be the data sink with policy `KEYSET`
  File "keyset.php", line 38, characters 5-25:
  Another program point contributing to the illegal flow
